div사이즈 변경 후 중간부터 스크롤 안됨

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         </article><!-- cont -->
         <article class="cont" id="cont_2">
             <ul id="slider">
-                <li><div>lorem</div><span class="redSpan"></span></li>
-                <li><div>lorem</div><span class="redSpan"></span></li>
-                <li><div>lorem</div><span class="redSpan"></span></li>
-                <li><div>lorem</div><span class="redSpan"></span></li>
-                <li><div>lorem</div><span class="redSpan"></span></li>
-                <li><div>lorem</div><span class="redSpan"></span></li>
-                <li><div>lorem</div><span class="redSpan"></span></li>
-                <li><div>lorem</div><span class="redSpan"></span></li>
+                <li><div>lorem1</div><span class="redSpan"></span></li>
+                <li><div>lorem2</div><span class="redSpan"></span></li>
+                <li><div>lorem3</div><span class="redSpan"></span></li>
+                <li><div>lorem4</div><span class="redSpan"></span></li>
+                <li><div>lorem5</div><span class="redSpan"></span></li>
+                <li><div>lorem6</div><span class="redSpan"></span></li>
+                <li><div>lorem7</div><span class="redSpan"></span></li>
+                <li><div>lorem8</div><span class="redSpan"></span></li>
             </ul>
             <div id="indicator">
                 <div id="indi_bar"></div>
