--- a/index.html
+++ b/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>scroll2</title>
 
     <link rel="stylesheet" href="./css/scroll.css">
-    
 </head>
 <body>
-    <section id="wrapper">
-        <article class="cont" id="cont_1">
-            HELLO
-        </article><!-- cont -->
-        <article class="cont" id="cont_2">
-            <ul id="slider">
-                <li><div>lorem1</div><span class="redSpan"></span></li>
-                <li><div>lorem2</div><span class="redSpan"></span></li>
-                <li><div>lorem3</div><span class="redSpan"></span></li>
-                <li><div>lorem4</div><span class="redSpan"></span></li>
-                <li><div>lorem5</div><span class="redSpan"></span></li>
-                <li><div>lorem6</div><span class="redSpan"></span></li>
-                <li><div>lorem7</div><span class="redSpan"></span></li>
-                <li><div>lorem8</div><span class="redSpan"></span></li>
-            </ul>
-            <div id="indicator">
-                <div id="indi_bar"></div>
+    <div class="container">
+        <div class="wrap">
+            <div id="box1" class="box box1">
+                <p>div1</p>
             </div>
-        </article><!-- cont -->
-    </section><!-- wrapper -->
+            <div class="box box2">
+                <p>div2</p>
+            </div>
+            <div class="box box3">
+                <p>div3</p>
+            </div>
+            <div class="box box4">
+                <p>div4</p>
+            </div>
+            <div class="box box5">
+                <p>div5</p>
+            </div>
+        </div>
+    </div>
     <script src="./js/scroll.js"></script>
 </body>
 </html>
