--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
     <div class="container">
         <div class="wrap">
             <div id="box1" class="box box1">
-                <p>div1</p>
+                <div class="event">
+                    <form id="formMobile" name="formMobile" method="post" action="https://script.google.com/macros/s/AKfycbyqAPljk50Kqr0ezzlY7NooB8oxTmItTVwU6FclfbdwnbzPmnVsJl6nJcebwazL3i5M/exec" target="frAttachFiles">
+                        <input type="hidden" id="apt_seq" name="apt_seq" value="116" />
+                        <input type="hidden" id="call_seq" name="call_seq" value="31675" />
+                        <input type="hidden" id="crm_seq" name="crm_seq" value="1171" />
+                        <input class="input" name="cname" id="cname" type="text" placeholder="이름 입력" required>
+                        <input class="input" name="cphone" id="cphone" type="tel" placeholder="휴대폰 번호 입력(- 제외)" required>
+                        <input id="email" type="text" name="email" placeholder="ex)abc@naver.com" required>
+                        <p class="txt tc ev">※ 전화상담 예약자 본인의 연락처를 작성해주세요.</p>
+                        <div class="agree">
+                            <span class="check">
+                                <input type="checkbox" id="ag" name="ag">
+                                <span></span>
+                                <label for="ag">개인정보 수집 및 이용 동의(필수)</label>
+                            </span>
+                            <button type="button" class="btPop">약관보기</button>
+                        </div>
+                         <iframe name="frAttachFiles" style="display:none"></iframe>
+                         <input type="submit" class="black_btn shadow" ></input>
+                        
+                    </form>
+                </div>
             </div>
             <div class="box box2">
                 <p>div2</p>
@@ -29,5 +50,6 @@
         </div>
     </div>
     <script src="./js/scroll.js"></script>
+    <script src="./js/form.js"></script>
 </body>
 </html>
